Disable management metrics binders in test properties

--- a/Backend/src/test/resources/application-test.properties
+++ b/Backend/src/test/resources/application-test.properties
@@ -8,4 +8,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+management.metrics.binders.system.enabled=false
+management.metrics.binders.processor.enabled=false
+management.metrics.binders.tomcat.enabled=false
+
 spring.main.allow-bean-definition-overriding=true
