--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,17 +1,20 @@
-# ใช้ Node เวอร์ชันใหม่
+# Build stage
 FROM node:22 AS build
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-
 COPY . .
 RUN npm run build
 
-# Serve ด้วย Nginx
+# Serve stage
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
+
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf.template /etc/nginx/templates/default.conf.template
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+
+# ใช้ envsubst เพื่อแทนค่า BACKEND_HOST
+CMD ["/bin/sh", "-c", "envsubst '$$BACKEND_HOST' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
