--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -21,3 +21,6 @@ spec:
           envFrom:
             - configMapRef:
                 name: frontend-config
+          env:
+            - name: BACKEND_HOST
+              value: backend-service
