--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -188,78 +188,47 @@ jobs:
         run: docker compose -f "${{ env.COMPOSE_FILE }}" down -v
 
   # ==========================================
-  # Docker Push (Frontend)
+  # Push Backend Image (after test passes)
   # ==========================================
-  docker-push-frontend:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    name: Build & Push Frontend Image
+  build-backend:
     runs-on: ubuntu-latest
-    needs: [backend, e2e]
-    env:
-      IMAGE_NAME: heangkung/organicnow-frontend
-      TAG_SHA: ${{ github.sha }}
-      TAG_LATEST: latest
+    needs: backend
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build backend Docker image
+        run: docker build -f Backend/Dockerfile -t backend:${{ github.run_id }} Backend
+
+      - name: Login to Container Registry
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
+
+      - name: Push backend image
+        run: |
+          docker tag backend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+
+  # ==========================================
+  # Build Frontend (Vite / React)
+  # ==========================================
+  build-frontend:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build frontend Docker image
+        run: docker build -f Frontend/Dockerfile -t frontend:${{ github.run_id }} Frontend
 
-      - name: Build & Push (SHA tag)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_SHA }}
+      - name: Login to Container Registry
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
-      - name: Also tag :latest when on main
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_LATEST }}
-
-  # ==========================================
-  # Docker Push (Backend)
-  # ==========================================
-  docker-push-backend:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    name: Build & Push Backend Image
-    runs-on: ubuntu-latest
-    needs: [backend, e2e]
-    env:
-      IMAGE_NAME: heangkung/organicnow-backend
-      TAG_SHA: ${{ github.sha }}
-      TAG_LATEST: latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build & Push (SHA tag)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_SHA }}
-
-      - name: Also tag :latest when on main
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_LATEST }}
+      - name: Push frontend image
+        run: |
+          docker tag frontend:${{ github.run_id }} ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+      - name: Show backend logs
+        if: failure()
+        run: docker logs be
 
   # ==========================================
   # Update Helm values (GitOps for ArgoCD)
@@ -267,7 +236,7 @@ jobs:
   update-helm-values:
     name: Update Helm Chart Values
     runs-on: ubuntu-latest
-    needs: [docker-push-frontend, docker-push-backend]
+    needs: [build-backend, build-frontend]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -293,6 +262,6 @@ jobs:
   summary:
     name: CI/CD Summary
     runs-on: ubuntu-latest
-    needs: [backend, e2e, docker-push-frontend, docker-push-backend, update-helm-values]
+    needs: [backend, e2e, build-backend, build-frontend, update-helm-values]
     steps:
       - run: echo "✅ Backend test, Cypress E2E, Docker push, and Helm update completed successfully."
