--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -231,37 +231,11 @@ jobs:
         run: docker logs be
 
   # ==========================================
-  # Update Helm values (GitOps for ArgoCD)
-  # ==========================================
-  update-helm-values:
-    name: Update Helm Chart Values
-    runs-on: ubuntu-latest
-    needs: [build-backend, build-frontend]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update image tags in values.yaml
-        run: |
-          sed -i "s|apartment-backend:.*|apartment-backend:${{ github.sha }}|" k8s/apartment-chart/values.yaml
-          sed -i "s|apartment-frontend:.*|apartment-frontend:${{ github.sha }}|" k8s/apartment-chart/values.yaml
-
-      - name: Commit and push updated values.yaml
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add k8s/apartment-chart/values.yaml
-          git commit -m "chore(ci): update image tags to ${{ github.sha }} for ArgoCD sync" || echo "No changes to commit"
-          git push origin HEAD:${{ github.ref_name }}
-
-  # ==========================================
   # CI Summary
   # ==========================================
   summary:
     name: CI/CD Summary
     runs-on: ubuntu-latest
-    needs: [backend, e2e, build-backend, build-frontend, update-helm-values]
+    needs: [backend, e2e, build-backend, build-frontend]
     steps:
       - run: echo "✅ Backend test, Cypress E2E, Docker push, and Helm update completed successfully."
