--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -212,6 +212,7 @@ jobs:
   # ==========================================
   build-frontend:
     runs-on: ubuntu-latest
+    needs: e2e
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -238,4 +239,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend, e2e, build-backend, build-frontend]
     steps:
-      - run: echo "✅ Backend test, Cypress E2E, Docker push, and Helm update completed successfully."
+      - run: echo "✅ Backend test, Cypress E2E, and Docker push completed successfully."
