--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "promptpay-qr": "^0.5.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
