--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -27,3 +27,20 @@ server.port=8080
 
 admin.email=admin@apt.com
 admin.password=ict555
+
+
+
+# Metrics (Prometheus)
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.prometheus.metrics.export.enabled=true
+
+# Tracing (OpenTelemetry)
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+management.tracing.propagation.type=w3c
+
+management.otlp.metrics.export.url=http://otel-collector:4318/v1/metrics
+management.otlp.tracing.endpoint=http://otel-collector:4318/v1/traces
+management.statsd.metrics.export.protocol=protobuf
+
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
