--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -83,8 +83,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Login to Registry
-        run: echo "${{ secrets.REGISTRY_TOKEN }}" | \
-          docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin "${{ secrets.REGISTRY_URL }}"
+        run:  echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
       - name: Build Backend Image
         run: |
