--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -143,8 +143,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Login Docker Registry
-        run: echo "${{ secrets.REGISTRY_TOKEN }}" | \
-          docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin "${{ secrets.REGISTRY_URL }}"
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
 
       - name: Create CI docker-compose file
         run: |
