--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -87,16 +87,19 @@ jobs:
 
       - name: Build Backend Image
         run: |
-          docker build -f Backend/Dockerfile -t backend:${{ github.sha }} Backend
+          docker build -f Backend/Dockerfile \
+            -t backend:${{ github.sha }} Backend
+
           docker tag backend:${{ github.sha }} \
             ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
 
+          docker tag backend:${{ github.sha }} \
+            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ secrets.IMAGE_TAG }}
+
       - name: Push Backend Image
         run: |
-          docker push \
-            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
-
-
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ secrets.IMAGE_TAG }}
 
   # ==========================================
   # 3. Build + Push Frontend Image
@@ -104,7 +107,7 @@ jobs:
   build-frontend:
     name: Build & Push Frontend Image
     runs-on: ubuntu-latest
-    needs: build-backend
+    needs: backend-test
 
     steps:
       - uses: actions/checkout@v4
@@ -114,15 +117,19 @@ jobs:
 
       - name: Build Frontend Image
         run: |
-          docker build -f Frontend/Dockerfile -t frontend:${{ github.sha }} Frontend
+          docker build -f Frontend/Dockerfile \
+            -t frontend:${{ github.sha }} Frontend
+      
           docker tag frontend:${{ github.sha }} \
             ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
-
+      
+          docker tag frontend:${{ github.sha }} \
+            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ secrets.IMAGE_TAG }}
+      
       - name: Push Frontend Image
         run: |
-          docker push \
-            ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
-
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ secrets.IMAGE_TAG }}
 
 
   # ==========================================
@@ -134,8 +141,8 @@ jobs:
     needs: [build-backend, build-frontend]
 
     env:
-      BACKEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ github.sha }}
-      FRONTEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ github.sha }}
+      BACKEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ secrets.IMAGE_TAG }}
+      FRONTEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ secrets.IMAGE_TAG }}
       COMPOSE_FILE: docker-compose.ci.yml
       BASE_URL: http://localhost:3000
 
