--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -133,87 +133,64 @@ jobs:
 
 
   # ==========================================
-  # 4. E2E Test (pull images from registry only)
+  # 4. E2E Test (using deployed URL on muict.app)
   # ==========================================
   e2e:
-    name: E2E Test (Docker Compose + Cypress)
+    name: E2E Test (Cypress on muict.app)
     runs-on: ubuntu-latest
     needs: [build-backend, build-frontend]
-
+  
     env:
-      BACKEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend:${{ secrets.IMAGE_TAG }}
-      FRONTEND_IMAGE: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend:${{ secrets.IMAGE_TAG }}
-      COMPOSE_FILE: docker-compose.ci.yml
-      BASE_URL: http://localhost:3000
-
+      BACKEND_URL: https://muict.app/chiphaifamily-backend
+      FRONTEND_URL: https://muict.app/chiphaifamily-frontend
+      BASE_URL: https://muict.app/chiphaifamily-frontend
+  
     steps:
       - uses: actions/checkout@v4
-
-      - name: Login Docker Registry
-        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin ${{ secrets.REGISTRY_URL }}
-
-      - name: Create CI docker-compose file
-        run: |
-          cat > docker-compose.ci.yml <<EOF
-          services:
-            backend:
-              image: ${BACKEND_IMAGE}
-              ports:
-                - "8080:8080"
-
-            frontend:
-              image: ${FRONTEND_IMAGE}
-              ports:
-                - "3000:80"
-
-            apartment-db:
-              image: postgres:15
-              environment:
-                POSTGRES_USER: postgres
-                POSTGRES_PASSWORD: admin
-                POSTGRES_DB: apartment_db
-              ports:
-                - "5432:5432"
-          EOF
-
-      - name: Start Docker Compose
-        run: docker compose -f docker-compose.ci.yml up -d
-
+  
+      # ----------------------------
+      # Wait Backend (muict.app)
+      # ----------------------------
       - name: Wait Backend
         run: |
           for i in {1..60}; do
-            curl -fsS http://localhost:8080/actuator/health && exit 0
+            curl -fsS $BACKEND_URL/actuator/health && exit 0
             sleep 2
           done
           exit 1
-
+  
+      # ----------------------------
+      # Wait Frontend (muict.app)
+      # ----------------------------
       - name: Wait Frontend
         run: |
           for i in {1..60}; do
-            curl -fsS http://localhost:3000 && exit 0
+            curl -fsS $FRONTEND_URL && exit 0
             sleep 2
           done
           exit 1
-
+  
+      # ----------------------------
+      # Setup Node + Cypress
+      # ----------------------------
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
+  
       - name: Install Cypress
         run: |
           cd Frontend
           npm ci
           npx cypress install
-
+  
+      # ----------------------------
+      # Run Cypress (remote URL)
+      # ----------------------------
       - name: Run Cypress E2E
         run: |
           cd Frontend
-          npx cypress run --headless
-
-      - name: Teardown
-        if: always()
-        run: docker compose -f docker-compose.ci.yml down -v
+          npx cypress run --headless --config baseUrl=$BASE_URL
 
 
 
